Update outdated documentation about NFI panama backend.