@@ -196,7 +196,7 @@ Depending on the configuration of components you are running, available backends
 The Panama backend uses the Foreign Function and Memory APIs introduced by [project Panama](https://openjdk.org/projects/panama/). 
 This backend only supports a subset of all the types. Specifically, it does not support `STRING`, `OBJECT`, `ENV`, `FP80` or array types.
 Although less feature-complete, the backend is typically more performant.
-Currently, it is available starting from JDK 21 with the `--enable-preview` tag.
+It is available starting from JDK 22.
 
 ### Truffle NFI on Native Image
 
